- Added PurpleAir - Fixed an issue with loading grapher data - Minor whitespace cleanup

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -51,7 +51,7 @@
 }
 
 .dashboard-page .border {
-  border: 1px solid black;
+  border: 0px solid black;
 }
 
 .dashboard-page .guide-expanded {
